[FIX] fork me z-index

--- a/beautifulmind/static/css/global.css
+++ b/beautifulmind/static/css/global.css
@@ -3,7 +3,7 @@ body {
 }
 
 #forkme-ribbon {
-    z-index: 1000;
+    z-index: -1000;
     position: absolute;
     top: 41px;
     left: 0;
